fdo#83371 : cannot navigate to list Files in LibreOffice dialogs

Change-Id: Ice5315136e25ece6a65c6136f0703825c426cf20
Reviewed-on: https://gerrit.libreoffice.org/13704
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>