fpicker/source/office/iodlg.cxx
@@ -395,6 +395,11 @@ public:
         placesNewSize.Height() = aSize.Height();
         _pImp->_pPlaces->SetSizePixel( placesNewSize );
     }
+
+    virtual void GetFocus() SAL_OVERRIDE
+    {
+        _pFileView->GrabFocus();
+    }
 };
 
 SvtFileDialog::~SvtFileDialog()
@@ -523,6 +528,7 @@ void SvtFileDialog::Init_Impl
     _pContainer->set_width_request(aSize.Width());
     _pContainer->set_hexpand(true);
     _pContainer->set_vexpand(true);
+    _pContainer->SetStyle( _pContainer->GetStyle() | WB_TABSTOP );
 
     _pFileView = new SvtFileView( _pContainer, WB_BORDER,
                                        FILEDLG_TYPE_PATHDLG == _pImp->_eDlgType,
